power: Fix mnemonic activation

There were some stupid mistakes, where we didn't set up the
right mnemonic widgets due to variable reuse. For the automatic
suspend row, we have to work a little harder to make mnemonic
activation work, by connecting directly to ::mnemonic-activate.
https://bugzilla.gnome.org/show_bug.cgi?id=692754